--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/vue-table": "^8.21.2",
@@ -31,6 +32,7 @@
     "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-sonner": "^1.3.0",
     "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
